--- a/Frontend/Register.html
+++ b/Frontend/Register.html
@@ -21,6 +21,10 @@
                         <label for="password" class="form-label">Senha</label>
                         <input type="password" class="form-control" id="password" required>
                     </div>
+                    <div class="mb-3">
+                        <label for="confirmPassword" class="form-label">Confirmar senha</label>
+                        <input type="password" class="form-control" id="confirmPassword" required>
+                    </div>
                     <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
                 </form>
                 <p class="mt-3 text-center">
