--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,19 +10,16 @@
 
     <div class="container mt-4">
 
-        <!-- Cabeçalho -->
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Conversor de Criptomoedas</h2>
             <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
         </div>
 
-        <!-- Seção de conversão -->
         <div class="card p-4 mb-4">
             <h4>Converter</h4>
             <div class="mb-3">
                 <label for="cryptoSelect" class="form-label">Escolha a criptomoeda</label>
                 <select class="form-select" id="cryptoSelect">
-                    <!-- Aqui você pode carregar da CoinGecko com JS -->
                     <option value="bitcoin">Bitcoin (BTC)</option>
                     <option value="ethereum">Ethereum (ETH)</option>
                     <option value="litecoin">Litecoin (LTC)</option>
@@ -32,29 +29,22 @@
                 <label for="amountInput" class="form-label">Quantidade</label>
                 <input type="number" class="form-control" id="amountInput" placeholder="Ex: 1.5">
             </div>
-            <button id="convertBtn" class="btn btn-primary w-100">Converter</button>
+            <button id="convertBtn" class="btn btn-primary w-100 mb-3">Converter</button>
             <div class="mt-3" id="resultArea"></div>
         </div>
 
-        <!-- Seção de favoritos -->
         <div class="card p-4 mb-4">
             <h4>Favoritos</h4>
-            <ul id="favoritesList" class="list-group">
-                <!-- Criptos favoritadas aparecem aqui -->
-            </ul>
+            <ul id="favoritesList" class="list-group"></ul>
         </div>
 
-        <!-- Seção de histórico -->
         <div class="card p-4 mb-4">
             <h4>Histórico de conversões</h4>
-            <ul id="historyList" class="list-group">
-                <!-- Histórico de conversões aparece aqui -->
-            </ul>
+            <ul id="historyList" class="list-group"></ul>
         </div>
 
     </div>
 
     <script src="js/main.js"></script>
-
 </body>
 </html>
